Fix broken nav layout on small screens

--- a/packages/circus-web-ui/app/front-ui/pages/app.less
+++ b/packages/circus-web-ui/app/front-ui/pages/app.less
@@ -1,7 +1,6 @@
 // Top navigation
 header {
 	margin: 0 auto 5px;
-	height: 40px;
 	position: relative;
 	background-color: @brand-dark;
 	border-bottom: 1px solid darken(@brand-dark, 10%);
@@ -26,6 +25,7 @@ header {
 		}
 
 		> ul { // main navigation menu
+			margin: 0;
 			padding: 0 5px;
 			> li { // main navigation item
 				padding: 0 5px;
